# csm-thesis-repo

./: README.md
bn-sampler/: .gitignore  README.md  run.sh
bn-sampler/src/: create_bayesian.py  format_data.py  main.py  sample_data.py
cpdag-benchmark/: .gitignore  CMakeLists.txt  README.md
cpdag-benchmark/scripts/: bar_plot.py  config.py  file_manager.py  ruff.toml  run.py  scatter_plot.py  util.py
cpdag-benchmark/src/: config.hpp  convert.cpp  convert.hpp  main.cpp  read-dag-file.cpp  read-dag-file.hpp  util.cpp  util.hpp
cpdag-benchmark/src/algorithms/: bb.cpp  bb.hpp  greedy.cpp  greedy.hpp  lb.cpp  lb.hpp  median.cpp  median.hpp  threshold.cpp  threshold.hpp
dag-benchmark/: .gitignore  CMakeLists.txt  README.md
dag-benchmark/scripts/: config.py  run.py  scatter_plot.py
dag-benchmark/src/: config.hpp  main.cpp  util.cpp  util.hpp
dag-benchmark/src/algorithms/: bitdp.cpp  bitdp.hpp  greedy.cpp  greedy.hpp  lb.cpp  lb.hpp  median-dag.cpp  median-dag.hpp
dag-generator/: .clang-format  .gitignore  CMakeLists.txt  README.md
dag-generator/src/: config.hpp  main.cpp  p-change.cpp  p-change.hpp  util.cpp  util.hpp
